# assegnamento_gdb_valgrind_cmake-RiccardoBresolinUnipd

gdb/: CMakeLists.txt
gdb/app/: CMakeLists.txt
gdb/app/src/: gdb1.c  gdb3.c
valgrind/: CMakeLists.txt  valgrind3.c
valgrind/app/: CMakeLists.txt
